The API expose 2 pdf from the CAF
