# back/routes/index.js
@@ -25,7 +25,8 @@ exports.configure = function (app, options) {
   app.get('/api/impots/svair', impotsController.svair);
   app.get('/api/ping/impots', impotsController.ping);
   app.get('/api/impots/adress', impotsController.adress);
-  app.get('/api/caf/attestation', cafController.attestation);
+  app.get('/api/caf/attestation/qf', cafController.attestationQf);
+  app.get('/api/caf/attestation/droits', cafController.attestationDroits);
   app.get('/api/ping/caf', cafController.ping);
   app.get('/api/admin/users', adminController.getUsers);
   app.post('/api/admin/users', adminController.createUser);
